test/checker/register/invalid/duplicate_field.km
module DuplicateField;

type Foo {
    Bar: Int,
    Baz: Int,
    Bar: String
};
